--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,7 +1,6 @@
 @font-face {
   font-family: "Silk Flower";
   src: url("../fonts/Silk\ Flower.otf") format("woff2");
-  /* Formato WOFF2 */
 }
 
 @font-face {
@@ -9,25 +8,27 @@
   src: url("../fonts/Alegreya-VariableFont_wght.ttf");
 }
 
+@font-face {
+  font-family: 'Alfa Slab One';
+  font-style: normal;
+  font-display: swap;
+  font-weight: 100;
+  src: url(https://cdn.jsdelivr.net/fontsource/fonts/alfa-slab-one@latest/latin-400-normal.woff2) format('woff2'), url(https://cdn.jsdelivr.net/fontsource/fonts/alfa-slab-one@latest/latin-400-normal.woff) format('woff');
+  unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
+}
 
-/* global.css */
 nav {
-  background-color: #38a3a5b6 !important;
-
+  background-color: #2a3d45 !important;
+  backdrop-filter: blur(.3em); 
   position: fixed;
   top: 0;
   width: 100%;
   height: 5em;
-  /* Ajusta la altura de la barra */
   display: flex;
   justify-content: center;
-  /* Centrar horizontalmente */
   align-items: center;
-  /* Centrar verticalmente */
   z-index: 1;
-  /* Asegura que el navbar esté por encima de otros elementos */
   transition: background-color 0.5s ease;
-  /* Transición suave para el cambio de color de fondo */
 }
 
 nav div {
@@ -38,74 +39,70 @@ nav div {
 
 nav div a {
   margin: 0 1em;
-  /* Espacio entre los enlaces */
   transition: color 0.5s ease;
-  /* Transición suave para el cambio de color de texto */
   position: relative;
-  /* Establece una posición relativa para el enlace */
-  font-family: "Alegreya";
+  font-family: 'Alfa Slab One',Arial, Helvetica, sans-serif;
   letter-spacing: 0.1em;
 }
 
-svg{
-  vertical-align: sub;
-}
-
-/* Media query para pantallas pequeñas */
 @media screen and (max-width: 600px) {
   nav {
     padding-top: 1.5em;
     padding-bottom: 1em;
     height: auto;
-    /* Altura automática para adaptarse al contenido */
   }
 
   nav div a {
     font-size: xx-large;
-    /* Reducción del tamaño de la fuente para pantallas pequeñas */
   }
 }
 
-nav div a:active {
-  color: black;
+nav div a:hover,
+nav div a:active,
+.nav-link:hover,
+.nav-link:active {
+  color: #ee964b !important;
 }
 
 .nav-link {
   color: lightgray;
-  font-weight: 600;
+  margin: 0 1em;
+  transition: color 0.5s ease;
+  position: relative;
+  font-family: 'Alfa Slab One';
+  letter-spacing: 0.1em;
 }
 
-#FitVibes {
-  font-family: "Silk Flower", Cambria, Cochin, Georgia, Times, serif;
-  justify-content: left;
-
-}
-
-#FitVibes:hover::before {
-  width: 0%;
-
-}
-
-nav div a::before {
+.nav-link::before {
   content: "";
-  /* Agrega contenido al pseudo-elemento */
   position: absolute;
-  /* Establece una posición absoluta */
   bottom: 5px;
-  /* Ubica el pseudo-elemento en la parte inferior del enlace */
   left: 0;
-  /* Inicia el pseudo-elemento desde el lado izquierdo del enlace */
   width: 0;
-  /* Inicialmente establece el ancho en 0 */
   height: 2px;
-  /* Establece la altura del underline */
-  background-color: black;
-  /* Color del underline */
+  background-color: #ee964b;
   transition: width 0.3s ease;
-  /* Transición suave para el ancho del underline */
 }
 
-nav div a:hover::before {
+.nav-link:hover::before {
   width: 100%;
-  /* Al hacer hover, expande el underline al 100% del ancho del enlace */
+}
+
+.transparent {
+  background-color: transparent !important;
+  transition: background-color 0.5s;
+}
+
+.transparent .nav-link:hover,
+.transparent .nav-link:active
+{
+  color: black !important;
+}
+.transparent .nav-link::before {
+  background-color: black !important;
+}
+
+.navbar-toggler, .navbar-toggler-icon{
+  background-color: white !important;
+
 }
