--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,22 +1,3 @@
-@font-face {
-  font-family: "Silk Flower";
-  src: url("../fonts/Silk\ Flower.otf") format("woff2");
-}
-
-@font-face {
-  font-family: "Alegreya";
-  src: url("../fonts/Alegreya-VariableFont_wght.ttf");
-}
-
-@font-face {
-  font-family: 'Alfa Slab One';
-  font-style: normal;
-  font-display: swap;
-  font-weight: 100;
-  src: url(https://cdn.jsdelivr.net/fontsource/fonts/alfa-slab-one@latest/latin-400-normal.woff2) format('woff2'), url(https://cdn.jsdelivr.net/fontsource/fonts/alfa-slab-one@latest/latin-400-normal.woff) format('woff');
-  unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
-}
-
 nav {
   background-color: #2a3d45 !important;
   backdrop-filter: blur(.3em); 
@@ -54,6 +35,9 @@ nav div a {
 
   nav div a {
     font-size: xx-large;
+  }
+  .logo {
+    position: relative !important;
   }
 }
 
@@ -106,3 +90,12 @@ nav div a:active,
   background-color: white !important;
 
 }
+
+.logo{
+  position:fixed;
+  top:1em;
+  left: 1em;
+  width: 150px;
+  height: auto;
+}
+
