--- a/src/css/global.css
+++ b/src/css/global.css
@@ -17,24 +17,58 @@
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
-.carta {
-    padding: 5em;
-    border-radius: 1px solid;
-    opacity: 0.6;
-    box-shadow: 10px 5px 5px rgb(46, 44, 44, 0.6);
+/* dm-serif-text-latin-400-normal */
+@font-face {
+    font-family: 'DM Serif Text';
+    font-style: normal;
+    font-display: swap;
+    font-weight: 400;
+    src: url(https://cdn.jsdelivr.net/fontsource/fonts/dm-serif-text@latest/latin-400-normal.woff2) format('woff2');
+    unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
+  }
+
+body {
+    background-image: url('../images/bkg.svg') !important;
+    /* background-repeat: no-repeat;
+    background-position: center; */
+    background-size: cover;
 }
 
-@media (max-width: 768px) {
+.card-title, .card-text{
+    font-family: 'DM Serif Text', serif;
+    color: #2a3d45 !important;
+    font-weight: 400;
+}
+
+.card-text{
+    text-align: justify !important;
+    font-size: x-large;
+    font-weight: 400;
+}
+
+.image{
+    margin-bottom: 2em;  
+    box-shadow: 10px 5px 5px rgb(46, 44, 44, 0.6);
+    border-radius: 20px;
+}
+
+.carta {
+    padding: 2em;
+    border-radius: 20px !important;
+    /* opacity: 0.6; */
+    box-shadow: 10px 5px 5px rgb(46, 44, 44, 0.6);
+    background-color: rgba(255, 255, 255, 0.1) !important;
+    backdrop-filter: blur(2px) brightness(1);
+}
+
+@media (max-width: 968px) {
     .carta {
         padding: 0;
         margin-top: 3rem;
     }
+    .card-text{
+        font-size: medium;
+    }
 }
 
-body {
-    background-color: #ee964b !important;
-}
-.image{
-    margin-bottom: 2em;  
-    box-shadow: 10px 5px 5px rgb(46, 44, 44, 0.6);
-}
+
