--- a/src/css/global.css
+++ b/src/css/global.css
@@ -34,6 +34,9 @@ body {
     background-size: cover;
 }
 
+form{
+    font-family: 'Alegreya', serif;
+}
 .card-title, .card-text{
     font-family: 'DM Serif Text', serif;
     color: #2a3d45 !important;
@@ -60,6 +63,56 @@ body {
     background-color: rgba(255, 255, 255, 0.1) !important;
     backdrop-filter: blur(2px) brightness(1);
 }
+
+
+.btnfos-2 {
+    width: fit-content !important;
+    color:white !important;
+    background-color: #2a3d456c !important;
+    font-family: "DM Serif Text", Arial, Helvetica, sans-serif !important;
+    letter-spacing: 0.1;
+  }
+  
+  .btnfos-2:hover,
+  .btnfos-2:active {
+    letter-spacing: 5px;
+    transition: 0.5s;
+  }
+  
+  .btnfos-2:after,
+  .btnfos-2:before {
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    border: 1px solid rgba(255, 255, 255, 0);
+    bottom: 0px;
+    content: " ";
+    display: block;
+    margin: 0 auto;
+    position: relative;
+    -webkit-transition: all 280ms ease-in-out;
+    transition: all 280ms ease-in-out;
+    width: 0;
+  }
+  
+  .btnfos-2:hover:after,
+  .btnfos-2:hover:before {
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    border-color: #fff;
+    -webkit-transition: width 350ms ease-in-out;
+    transition: width 350ms ease-in-out;
+    width: 70%;
+  }
+  
+  .btnfos-2:hover:before {
+    bottom: auto;
+    top: 0;
+    width: 70%;
+  }
+
+  .fitvibes-footer{
+    font-family: "DM Serif Text", Arial, Helvetica, sans-serif !important;
+  }
 
 @media (max-width: 968px) {
     .carta {
