--- a/src/css/global.css
+++ b/src/css/global.css
@@ -54,6 +54,12 @@ form{
     box-shadow: 10px 5px 5px rgb(46, 44, 44, 0.6);
     border-radius: 20px;
 }
+.img-alimentacion{
+  aspect-ratio: 1/1;
+  max-width: 300px !important;
+  object-fit: cover;
+  border-radius: 10px;
+}
 
 .carta {
     padding: 2em;
