--- a/src/css/global.css
+++ b/src/css/global.css
@@ -115,6 +115,10 @@ form{
     top: 0;
     width: 70%;
   }
+  #map {
+    height: 400px;
+    width: 100%;
+  }
 
   .fitvibes-footer{
     font-family: "DM Serif Text", Arial, Helvetica, sans-serif !important;
