--- a/src/css/global.css
+++ b/src/css/global.css
@@ -118,6 +118,9 @@ form{
   #map {
     height: 400px;
     width: 100%;
+    box-shadow: 10px 5px 5px rgb(46, 44, 44, 0.6);
+    border-radius: 20px;
+    backdrop-filter: blur(2px) brightness(1);
   }
 
   .fitvibes-footer{
