--- a/src/css/global.css
+++ b/src/css/global.css
@@ -40,6 +40,16 @@ form{
 progress{
   accent-color: darkorange;
 }
+#juego{
+  border: 4px solid #000;
+  background-color: antiquewhite;
+  border-radius: 1em;
+  width: 650px;
+  margin: 0 auto;
+  display: block;
+  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.4);
+  margin-bottom: 1em;
+}
 .card-title, .card-text{
     font-family: 'DM Serif Text', serif;
     color: #2a3d45 !important;
