--- a/src/css/global.css
+++ b/src/css/global.css
@@ -155,5 +155,30 @@ progress{
         font-size: medium;
     }
 }
+.grafico{
+  font-size: 24px;
+  text-decoration: none !important;
+}
+#container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1em;
+    margin-top: 2em;
+}
 
+#container > svg{
+  background-color: white !important;
+}
 
+.text-legend{
+    font-family: 'DM Serif Text', serif;
+    color: #2a3d45 !important;
+    font-size: 2em;
+}
+
+.text-legend-2{
+    font-family: 'DM Serif Text', serif;
+    color: #2a3d45 !important;
+    font-size: 1.5em;
+}
